Revert "fixed alignment"
This reverts commit bd6766a4f0c52a85ae8cc511aa29cb5e64c9ea41.

--- a/css/standardLayout.css
+++ b/css/standardLayout.css
@@ -106,7 +106,7 @@ body
 .search-bar 
 {
   /* can remove if wanna stick with og design */
-  padding-left: -80px; 
+  padding-left: 100px; 
   flex: 1;
   display: flex;
   align-items: center;
